--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h2 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;/HTML&gt;</span>
-            <img class="card__image" src="./images/card-image.jpeg" alt="Картинка Фургона" loading="lazy"/>
+            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -102,7 +102,7 @@
           <h2 class="card__title">1 спринт: Я — чистый лист</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;/HTML&gt;</span>
-            <img class="card__image" src="./images/card-image.jpeg" alt="Картинка Фургона" loading="lazy"/>
+            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -155,7 +155,7 @@
           <h2 class="card__title">1 спринт: А если не получится?</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;css&gt;</span>
-            <img class="card__image" src="./images/card-image.jpeg" alt="Картинка Фургона" loading="lazy"/>
+            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -205,7 +205,7 @@
           <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;desigions&gt;</span>
-            <img class="card__image" src="./images/card-image.jpeg" alt="Картинка Фургона" loading="lazy"/>
+            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -257,7 +257,7 @@
           <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;care&gt;</span>
-            <img class="card__image" src="./images/card-image.jpeg" alt="Картинка Фургона" loading="lazy"/>
+            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -310,7 +310,7 @@
           <h2 class="card__title">3 спринт: Обходные стратегии</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;support&gt;</span>
-            <img class="card__image" src="./images/card-image.jpeg" alt="Картинка Фургона" loading="lazy"/>
+            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -360,7 +360,7 @@
           <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;lifes-style: none;&gt;</span>
-            <img class="card__image" src="./images/card-image.jpeg" alt="Картинка Фургона" loading="lazy"/>
+            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -412,7 +412,7 @@
           <h2 class="card__title">«Сейчас я здесь»</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;experience&gt;</span>
-            <img class="card__image" src="./images/card-image.jpeg" alt="Картинка Фургона" loading="lazy"/>
+            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
