--- a/index.html
+++ b/index.html
@@ -464,14 +464,14 @@
       </section>
       <button class="button content__save-button" type="button" onclick="window['dialog-save'].showModal()" aria-controls="dialog-save">
         <svg class="floppy-icon content__floppy-icon" viewBox="0 0 39 39" xmlns="http://www.w3.org/2000/svg">
-          <use href="./svg/floppy-disk.svg"></use>
+          <use href="./svg/floppy-disk.svg#floppy"></use>
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
       <dialog class="dialog" id="dialog-save">
         <div class="dialog__message">
           <svg class="floppy-icon dialog__floppy-icon" viewBox="0 0 39 39" xmlns="http://www.w3.org/2000/svg">
-            <use href="./svg/floppy-disk.svg"></use>
+            <use href="./svg/floppy-disk.svg#floppy"></use>
           </svg>
           <h2 class="dialog__text">Вставьте дискету, чтобы продолжить</h2>
         </div>
