--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light">
+    <meta name="color-scheme" content="light dark">
     <title>Закрывающий тег</title>
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
     <link rel="stylesheet" href="./styles/themes.css" />
-    <link rel="icon" href="./images/favicon.ico" sizes="any" />
-    <link rel="icon" href="./svg/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./images/mobile-icon.png" />
     <script src="./scripts/set-theme.js"></script>
   </head>
   <body class="page">
     <header class="header">
-      <a class="header__logo" aria-label="Логотип и ссылка на главную в виде тэга html">&lt;/html&gt;</a>
+      <a class="header__logo" aria-label="Логотип сайта">&lt;/html&gt;</a>
       <h1 class="header__title">Закрывающий тег</h1>
       <nav class="theme-menu header__theme-menu">
         <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
@@ -52,7 +52,7 @@
           <h2 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;/HTML&gt;</span>
-            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
+            <img class="card__image" src="./images/cat-presprint.jpg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -102,7 +102,7 @@
           <h2 class="card__title">1 спринт: Я — чистый лист</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;/HTML&gt;</span>
-            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
+            <img class="card__image" src="./images/cat-first-sprint.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -155,7 +155,7 @@
           <h2 class="card__title">1 спринт: А если не получится?</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;css&gt;</span>
-            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
+            <img class="card__image" src="./images/cat-first-sprint-v2.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -205,7 +205,7 @@
           <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;desigions&gt;</span>
-            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
+            <img class="card__image" src="./images/cat-second-sprint.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -256,8 +256,8 @@
         <article class="card">
           <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
           <div class="card__image-wrapper">
-            <span class="card__tag" aria-hidden="true">&lt;care&gt;</span>
-            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
+            <span class="card__tag" aria-hidden="true">care</span>
+            <img class="card__image" src="./images/cat-second-sprint-v2.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -310,7 +310,7 @@
           <h2 class="card__title">3 спринт: Обходные стратегии</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;support&gt;</span>
-            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
+            <img class="card__image" src="./images/cat-third-sprint.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -360,7 +360,7 @@
           <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;lifes-style: none;&gt;</span>
-            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
+            <img class="card__image" src="./images/cat-third-sprint-v2.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -412,7 +412,7 @@
           <h2 class="card__title">«Сейчас я здесь»</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;experience&gt;</span>
-            <img class="card__image" src="./images/card-image.jpg" alt="Картинка Фургона" loading="lazy"/>
+            <img class="card__image" src="./images/cat-im-here.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
