--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h2 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;/HTML&gt;</span>
-            <img class="card__image" src="./images/cat-presprint.jpg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--filter1" src="./images/cat-presprint.jpg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -80,13 +80,13 @@
                       d="M12 9H9V12H12V9ZM15 12H12V15H15V12ZM18 9H15V12H18V9ZM12 15H9V18H12V15ZM15 15H12V18H15V15ZM15 18H12V21H15V18ZM18 12H15V15H18V12ZM18 21H15V24H18V21ZM18 18H15V21H18V18ZM27 9H30V12H27V9ZM24 9H27V12H24V9ZM27 12H30V15H27V12ZM24 12H27V15H24V12ZM21 9H24V12H21V9ZM27 15H30V18H27V15ZM24 15H27V18H24V15ZM24 18H27V21H24V18ZM21 12H24V15H21V12ZM21 21H24V24H21V21ZM21 18H24V21H21V18ZM21 21H18V24H21V21ZM21 24H18V27H21V24Z"
                     />
                     <path
-                      class="core"
+                      class="body"
                       fill="none"
                       d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z"
                     />
                   </g>
                   <path
-                    class="sparks"
+                    class="lights"
                     fill="var(--color-heart-fill)"
                     d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                   />
@@ -102,7 +102,7 @@
           <h2 class="card__title">1 спринт: Я — чистый лист</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;/HTML&gt;</span>
-            <img class="card__image" src="./images/cat-first-sprint.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--filter2" src="./images/cat-first-sprint.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -133,13 +133,13 @@
                       d="M12 9H9V12H12V9ZM15 12H12V15H15V12ZM18 9H15V12H18V9ZM12 15H9V18H12V15ZM15 15H12V18H15V15ZM15 18H12V21H15V18ZM18 12H15V15H18V12ZM18 21H15V24H18V21ZM18 18H15V21H18V18ZM27 9H30V12H27V9ZM24 9H27V12H24V9ZM27 12H30V15H27V12ZM24 12H27V15H24V12ZM21 9H24V12H21V9ZM27 15H30V18H27V15ZM24 15H27V18H24V15ZM24 18H27V21H24V18ZM21 12H24V15H21V12ZM21 21H24V24H21V21ZM21 18H24V21H21V18ZM21 21H18V24H21V21ZM21 24H18V27H21V24Z"
                     />
                     <path
-                      class="core"
+                      class="body"
                       fill="none"
                       d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z"
                     />
                   </g>
                   <path
-                    class="sparks"
+                    class="lights"
                     fill="var(--color-heart-fill)"
                     d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                   />
@@ -155,7 +155,7 @@
           <h2 class="card__title">1 спринт: А если не получится?</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;css&gt;</span>
-            <img class="card__image" src="./images/cat-first-sprint-v2.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--filter3" src="./images/cat-first-sprint-v2.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -183,13 +183,13 @@
                       d="M12 9H9V12H12V9ZM15 12H12V15H15V12ZM18 9H15V12H18V9ZM12 15H9V18H12V15ZM15 15H12V18H15V15ZM15 18H12V21H15V18ZM18 12H15V15H18V12ZM18 21H15V24H18V21ZM18 18H15V21H18V18ZM27 9H30V12H27V9ZM24 9H27V12H24V9ZM27 12H30V15H27V12ZM24 12H27V15H24V12ZM21 9H24V12H21V9ZM27 15H30V18H27V15ZM24 15H27V18H24V15ZM24 18H27V21H24V18ZM21 12H24V15H21V12ZM21 21H24V24H21V21ZM21 18H24V21H21V18ZM21 21H18V24H21V21ZM21 24H18V27H21V24Z"
                     />
                     <path
-                      class="core"
+                      class="body"
                       fill="none"
                       d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z"
                     />
                   </g>
                   <path
-                    class="sparks"
+                    class="lights"
                     fill="var(--color-heart-fill)"
                     d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                   />
@@ -205,7 +205,7 @@
           <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;desigions&gt;</span>
-            <img class="card__image" src="./images/cat-second-sprint.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--filter4" src="./images/cat-second-sprint.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -235,13 +235,13 @@
                       d="M12 9H9V12H12V9ZM15 12H12V15H15V12ZM18 9H15V12H18V9ZM12 15H9V18H12V15ZM15 15H12V18H15V15ZM15 18H12V21H15V18ZM18 12H15V15H18V12ZM18 21H15V24H18V21ZM18 18H15V21H18V18ZM27 9H30V12H27V9ZM24 9H27V12H24V9ZM27 12H30V15H27V12ZM24 12H27V15H24V12ZM21 9H24V12H21V9ZM27 15H30V18H27V15ZM24 15H27V18H24V15ZM24 18H27V21H24V18ZM21 12H24V15H21V12ZM21 21H24V24H21V21ZM21 18H24V21H21V18ZM21 21H18V24H21V21ZM21 24H18V27H21V24Z"
                     />
                     <path
-                      class="core"
+                      class="body"
                       fill="none"
                       d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z"
                     />
                   </g>
                   <path
-                    class="sparks"
+                    class="lights"
                     fill="var(--color-heart-fill)"
                     d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                   />
@@ -257,7 +257,7 @@
           <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">care</span>
-            <img class="card__image" src="./images/cat-second-sprint-v2.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--filter5" src="./images/cat-second-sprint-v2.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -288,13 +288,13 @@
                       d="M12 9H9V12H12V9ZM15 12H12V15H15V12ZM18 9H15V12H18V9ZM12 15H9V18H12V15ZM15 15H12V18H15V15ZM15 18H12V21H15V18ZM18 12H15V15H18V12ZM18 21H15V24H18V21ZM18 18H15V21H18V18ZM27 9H30V12H27V9ZM24 9H27V12H24V9ZM27 12H30V15H27V12ZM24 12H27V15H24V12ZM21 9H24V12H21V9ZM27 15H30V18H27V15ZM24 15H27V18H24V15ZM24 18H27V21H24V18ZM21 12H24V15H21V12ZM21 21H24V24H21V21ZM21 18H24V21H21V18ZM21 21H18V24H21V21ZM21 24H18V27H21V24Z"
                     />
                     <path
-                      class="core"
+                      class="body"
                       fill="none"
                       d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z"
                     />
                   </g>
                   <path
-                    class="sparks"
+                    class="lights"
                     fill="var(--color-heart-fill)"
                     d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                   />
@@ -310,7 +310,7 @@
           <h2 class="card__title">3 спринт: Обходные стратегии</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;support&gt;</span>
-            <img class="card__image" src="./images/cat-third-sprint.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--filter6" src="./images/cat-third-sprint.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -338,13 +338,13 @@
                       d="M12 9H9V12H12V9ZM15 12H12V15H15V12ZM18 9H15V12H18V9ZM12 15H9V18H12V15ZM15 15H12V18H15V15ZM15 18H12V21H15V18ZM18 12H15V15H18V12ZM18 21H15V24H18V21ZM18 18H15V21H18V18ZM27 9H30V12H27V9ZM24 9H27V12H24V9ZM27 12H30V15H27V12ZM24 12H27V15H24V12ZM21 9H24V12H21V9ZM27 15H30V18H27V15ZM24 15H27V18H24V15ZM24 18H27V21H24V18ZM21 12H24V15H21V12ZM21 21H24V24H21V21ZM21 18H24V21H21V18ZM21 21H18V24H21V21ZM21 24H18V27H21V24Z"
                     />
                     <path
-                      class="core"
+                      class="body"
                       fill="none"
                       d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z"
                     />
                   </g>
                   <path
-                    class="sparks"
+                    class="lights"
                     fill="var(--color-heart-fill)"
                     d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                   />
@@ -360,7 +360,7 @@
           <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;lifes-style: none;&gt;</span>
-            <img class="card__image" src="./images/cat-third-sprint-v2.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--filter7" src="./images/cat-third-sprint-v2.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -390,13 +390,13 @@
                       d="M12 9H9V12H12V9ZM15 12H12V15H15V12ZM18 9H15V12H18V9ZM12 15H9V18H12V15ZM15 15H12V18H15V15ZM15 18H12V21H15V18ZM18 12H15V15H18V12ZM18 21H15V24H18V21ZM18 18H15V21H18V18ZM27 9H30V12H27V9ZM24 9H27V12H24V9ZM27 12H30V15H27V12ZM24 12H27V15H24V12ZM21 9H24V12H21V9ZM27 15H30V18H27V15ZM24 15H27V18H24V15ZM24 18H27V21H24V18ZM21 12H24V15H21V12ZM21 21H24V24H21V21ZM21 18H24V21H21V18ZM21 21H18V24H21V21ZM21 24H18V27H21V24Z"
                     />
                     <path
-                      class="core"
+                      class="body"
                       fill="none"
                       d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z"
                     />
                   </g>
                   <path
-                    class="sparks"
+                    class="lights"
                     fill="var(--color-heart-fill)"
                     d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                   />
@@ -412,7 +412,7 @@
           <h2 class="card__title">«Сейчас я здесь»</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;experience&gt;</span>
-            <img class="card__image" src="./images/cat-im-here.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--filter8" src="./images/cat-im-here.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -443,13 +443,13 @@
                       d="M12 9H9V12H12V9ZM15 12H12V15H15V12ZM18 9H15V12H18V9ZM12 15H9V18H12V15ZM15 15H12V18H15V15ZM15 18H12V21H15V18ZM18 12H15V15H18V12ZM18 21H15V24H18V21ZM18 18H15V21H18V18ZM27 9H30V12H27V9ZM24 9H27V12H24V9ZM27 12H30V15H27V12ZM24 12H27V15H24V12ZM21 9H24V12H21V9ZM27 15H30V18H27V15ZM24 15H27V18H24V15ZM24 18H27V21H24V18ZM21 12H24V15H21V12ZM21 21H24V24H21V21ZM21 18H24V21H21V18ZM21 21H18V24H21V21ZM21 24H18V27H21V24Z"
                     />
                     <path
-                      class="core"
+                      class="body"
                       fill="none"
                       d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z"
                     />
                   </g>
                   <path
-                    class="sparks"
+                    class="lights"
                     fill="var(--color-heart-fill)"
                     d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                   />
