--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 подумать, как новые знания могут повлиять на ваше будущее.
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний о начале обучения.
+                Это было крутое время, время ожидания начала чего-то нового и интересного.
               </p>
             </div>
             <div class="card__button-wrapper">
@@ -115,7 +115,7 @@
                 я не справлюсь?
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний о начале первого спринта.
+                Было очень интересно начать делать первый проект и было приятного помогать ребятам.
               </p>
             </div>
             <div class="card__button-wrapper">
@@ -165,7 +165,7 @@
                 Или вы, наоборот, могли вдохновиться успехами и поверить в себя.
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний об окончании первого спринта.
+                Первый спринт показал, что я что-то понимаю, с нетерпением ждал второго проекта.
               </p>
             </div>
             <div class="card__button-wrapper">
@@ -217,7 +217,7 @@
                 сделать идеально, старались просто сделать.
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний о начале второго спринта.
+                Да, было ощущение, что я понимаю что-то и как же много я не понимаю.
               </p>
             </div>
             <div class="card__button-wrapper">
@@ -270,7 +270,7 @@
                 единомышленники, не правда ли?
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний об окончании второго спринта.
+                В этой проектической работе как-то получилось больше познакомиться со своими одногруппниками.
               </p>
             </div>
             <div class="card__button-wrapper">
@@ -320,7 +320,7 @@
                 пришло время посмотреть на задачу под другим углом.
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний о начале третьего спринта.
+                Да, помню когда я сдал работу, было ощущуние, что все супер, но потом я переделывал практически все.
               </p>
             </div>
             <div class="card__button-wrapper">
@@ -366,13 +366,13 @@
             <div class="card__text-wrapper">
               <p class="card__text">
                 Во время учёбы часто возникает чувство, когда не знаешь, за что
-                хвататься. Вроде и проектную пора&nbsp;сдавать, и задачи хочется
+                хвататься. Вроде и проектную пора сдавать, и задачи хочется
                 порешать, и в теории получше разобраться, и жизнь не забыть
                 пожить. В такие моменты очень нужна концентрация. Вспомните,
                 откуда вы её черпали.
               </p>
               <p class="card__text">
-                Место для ваших воспоминаний об окончании третьего спринта.
+                Концентрацию черпал от одногруппников, которые не давали мне опустить руки, когда своей мотивации не хватало.
               </p>
             </div>
             <div class="card__button-wrapper">
@@ -425,7 +425,7 @@
                 процесс познания. Ведь часто путь — и есть результат.
               </p>
               <p class="card__text">
-                Место, чтобы остановиться, подумать и написать, что вы чувствуете в этой точке пути.
+                Сил совсем нет, на работе завал и хочется отдыхать и смотреть в потолок.
               </p>
             </div>
             <div class="card__button-wrapper">
