--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h2 class="card__title">Фритрек и нулевой спринт: Подготовка к работе</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;/HTML&gt;</span>
-            <img class="card__image card__image--filter1" src="./images/cat-presprint.jpg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--grayscale-full" src="./images/cat-presprint.jpg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -102,7 +102,7 @@
           <h2 class="card__title">1 спринт: Я — чистый лист</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;/HTML&gt;</span>
-            <img class="card__image card__image--filter2" src="./images/cat-first-sprint.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--sepia" src="./images/cat-first-sprint.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -155,7 +155,7 @@
           <h2 class="card__title">1 спринт: А если не получится?</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;css&gt;</span>
-            <img class="card__image card__image--filter3" src="./images/cat-first-sprint-v2.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--blur" src="./images/cat-first-sprint-v2.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -205,7 +205,7 @@
           <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;desigions&gt;</span>
-            <img class="card__image card__image--filter4" src="./images/cat-second-sprint.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--grayscale" src="./images/cat-second-sprint.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -257,7 +257,7 @@
           <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">care</span>
-            <img class="card__image card__image--filter5" src="./images/cat-second-sprint-v2.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--brightness" src="./images/cat-second-sprint-v2.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -310,7 +310,7 @@
           <h2 class="card__title">3 спринт: Обходные стратегии</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;support&gt;</span>
-            <img class="card__image card__image--filter6" src="./images/cat-third-sprint.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--contrast" src="./images/cat-third-sprint.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -360,7 +360,7 @@
           <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;lifes-style: none;&gt;</span>
-            <img class="card__image card__image--filter7" src="./images/cat-third-sprint-v2.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--mixed" src="./images/cat-third-sprint-v2.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
@@ -385,18 +385,18 @@
                       d="M12 6H9V9H12V6ZM15 6H12V9H15V6ZM9 9H6V12H9V9ZM9 12H6V15H9V12ZM9 15H6V18H9V15ZM18 6H15V9H18V6ZM12 18H9V21H12V18ZM15 21H12V24H15V21ZM18 24H15V27H18V24ZM27 6H30V9H27V6ZM24 6H27V9H24V6ZM30 9H33V12H30V9ZM30 12H33V15H30V12ZM30 15H33V18H30V15ZM21 6H24V9H21V6ZM27 18H30V21H27V18ZM24 21H27V24H24V21ZM21 24H24V27H21V24ZM21 27H18V30H21V27ZM21 9H18V12H21V9Z"
                     />
                     <path
-                      class="core"
+                      class="main-body"
                       fill="none"
                       d="M12 9H9V12H12V9ZM15 12H12V15H15V12ZM18 9H15V12H18V9ZM12 15H9V18H12V15ZM15 15H12V18H15V15ZM15 18H12V21H15V18ZM18 12H15V15H18V12ZM18 21H15V24H18V21ZM18 18H15V21H18V18ZM27 9H30V12H27V9ZM24 9H27V12H24V9ZM27 12H30V15H27V12ZM24 12H27V15H24V12ZM21 9H24V12H21V9ZM27 15H30V18H27V15ZM24 15H27V18H24V15ZM24 18H27V21H24V18ZM21 12H24V15H21V12ZM21 21H24V24H21V21ZM21 18H24V21H21V18ZM21 21H18V24H21V21ZM21 24H18V27H21V24Z"
                     />
                     <path
-                      class="sparks"
+                      class="core"
                       fill="none"
                       d="M18 15H15V18H18V15ZM21 15H24V18H21V15ZM21 15H18V18H21V15ZM21 12H18V15H21V12ZM21 18H18V21H21V18Z"
                     />
                   </g>
                   <path
-                    class="lights"
+                    class="sparks"
                     fill="var(--color-heart-fill)"
                     d="M36 13H39V16H36V13ZM27 27H30V30H27V27ZM18 33H21V36H18V33ZM9 27H12V30H9V27ZM24 0H27V3H24V0ZM33 3H36V6H33V3ZM3 3H6V6H3V3ZM12 0H15V3H12V0ZM0 13H3V16H0V13Z"
                   />
@@ -412,7 +412,7 @@
           <h2 class="card__title">«Сейчас я здесь»</h2>
           <div class="card__image-wrapper">
             <span class="card__tag" aria-hidden="true">&lt;experience&gt;</span>
-            <img class="card__image card__image--filter8" src="./images/cat-im-here.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
+            <img class="card__image card__image--mixed-strong" src="./images/cat-im-here.jpeg" alt="Картинка уставшего кота" loading="lazy"/>
           </div>
           <div class="card__wrapper">
             <div class="card__text-wrapper">
